[package]
name = "str_id"
description = "Interns str slices, giving you back an ID value."
repository = "https://github.com/Lokathor/str_id"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "Zlib OR Apache-2.0 OR MIT"

[dependencies]
bimap = "0.6.3"
fnv = { version = "1.0.7", optional = true }

[features]
default = ["fnv"]
fnv = ["dep:fnv"]
